--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="p-5">
                   <h2 class="mb-5">Brian Ford</h2>
                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
-                  <p><a href="#">Checkout my resume</a></p>
+                  <p><a href="./assets/NewestResume.pdf"><span>Checkout My Resume</span></a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="https://twitter.com/BFordDev"><span class="icon-twitter"></span></a></li>
                     <li><a href="www.linkedin.com/in/bf2344"><span class="icon-linkedin"></span></a></li>
