--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                         </li>
                                     </ul>
                                     <h5>Contact me here!</h5>
-                                    <p>Email: <a href="bf@bford.dev">bf@bford.dev</a></p>
+                                    <p><span>Email:</span> <a href="mailto:bf@bford.dev">bf@bford.dev</a></p>
                                     <p>Phone: <a href="#">(561) 317-1195</a></p>
                                 </div>
                             </div>
@@ -187,8 +187,9 @@
                                 <div class="icon mb-3"><span class="icon-code"></span></div>
                                 <div class="media-body">
                                     <h3 class="heading">HTML/CSS</h3>
-                                    <h3 class="heading">Prototyping</h3>
-                                    <h3 class="heading">User Testing</h3>
+                                    <h3 class="heading">Javascript</h3>
+                                    <h3 class="heading">React</h3>
+                                    <h3 class="heading">D3</h3>
                                 </div>
                             </div>
                         </div>
@@ -230,14 +231,14 @@
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
                             <a href="portfolio-single.html"
                                 class="image order-2 d-flex justify-content-center align-items-center"
-                                style="background-image: url('images/work-2.jpg'); "
+                                style="background-image: url('images/portfoliopage.jpg'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
                                 <div class="icon d-flex text-center justify-content-center align-items-center">
                                     <span class="icon-search"></span>
                                 </div>
                             </a>
                             <div class="text order-1">
-                                <h4 class="subheading">Application</h4>
+                                <h4 class="subheading">Responsive Portfolio Page</h4>
                                 <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has
                                         no control</a></h2>
                                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
