--- a/contact.html
+++ b/contact.html
@@ -77,9 +77,9 @@
               <h2 class="h4">Contact Information</h2>
             </div>
             <div class="w-100"></div>
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
               <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
-            </div>
+            </div> -->
             <div class="col-md-3">
               <p><span>Phone:</span> <a href="tel://5613171195">+ (561) 317-1195</a></p>
             </div>
@@ -87,7 +87,7 @@
               <p><span>Email:</span> <a href="mailto:bf@bford.dev">bf@bford.dev</a></p>
             </div>
             <div class="col-md-3">
-              <p><span>Website:</span> <a href="www.bford.dev">bford.dev</a></p>
+              <p><span>Website:</span> <a href="www.b-ford.dev">bford.dev</a></p>
             </div>
           </div>
           <div class="row block-9">
