--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             </section>
 
             <section class="ftco-section ftco-counter" id="section-counter">
-                <div class="container">
+                <!-- <div class="container">
                     <div class="row justify-content-center mb-5 pb-5">
                         <div class="col-md-7 text-center heading-section ftco-animate">
                             <span>Portfolio</span>
@@ -361,7 +361,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <footer class="ftco-footer ftco-bg-dark ftco-section">
                 <div class="container">
