--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <div class="row justify-content-center mb-5 pb-5">
                         <div class="col-md-7 text-center heading-section ftco-animate">
                             <span>What I do</span>
-                            <h2>My services</h2>
+                            <h2>My Services</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -202,7 +202,7 @@
                     <div class="row justify-content-center mb-5 pb-5">
                         <div class="col-md-7 text-center heading-section ftco-animate">
                             <span>Portfolio</span>
-                            <h2>Checkout some of my work</h2>
+                            <h2>Take a look at some of my work</h2>
                         </div>
                     </div>
                     <div class="row no-gutters">
@@ -241,8 +241,7 @@
                                 <h4 class="subheading">Responsive Portfolio Page</h4>
                                 <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has
                                         no control</a></h2>
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic life One day however a small line of blind text.</p>
+                                <p>A portfolio template </p>
                                 <p><a href="#">View Project</a></p>
                             </div>
                         </div>
@@ -322,7 +321,7 @@
                 </div>
             </section>
 
-            <section class="ftco-section ftco-counter" id="section-counter">
+            <!-- <section class="ftco-section ftco-counter" id="section-counter"> -->
                 <!-- <div class="container">
                     <div class="row justify-content-center mb-5 pb-5">
                         <div class="col-md-7 text-center heading-section ftco-animate">
