--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                                 <h4 class="subheading">Responsive Portfolio Page</h4>
                                 <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has
                                         no control</a></h2>
-                                <p>A portfolio template </p>
+                                <p>A portfolio template page created as practice for using HTML/CSS/Javascript. Features Scrollify on links and also a couple minor CSS Animations.  </p>
                                 <p><a href="#">View Project</a></p>
                             </div>
                         </div>
