--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                                 <h1 class="bold-text">About</h1>
                                 <div class="p-5">
                                     <h2 class="mb-5">Brian Ford</h2>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and
-                                        Consonantia, there live the blind texts. Separated they live in.</p>
+                                    <p>A recent graduate of The University of Denver Full Stack Coding Program. Looking
+                                        for my first opportunity in the tech industry. </p>
                                     <p><a href="./assets/NewestResume.pdf">Checkout My Resume</a></p>
                                     <ul class="ftco-footer-social list-unstyled mt-4">
                                         <li><a href="https://twitter.com/BFordDev"><span
@@ -167,8 +167,8 @@
                                 <div class="icon mb-3"><span class="icon-layers"></span></div>
                                 <div class="media-body">
                                     <h3 class="heading">UI/UX Design</h3>
-                                    <h3 class="heading">Mobile App Design</h3>
                                     <h3 class="heading">Responsive Design</h3>
+                                    <h3 class="heading">Data Visualization</h3>
                                 </div>
                             </div>
                         </div>
@@ -224,12 +224,12 @@
                                     shot. Explore how standings could have differed, potential wins for that season, the
                                     correlation between time left and distance of shot, team efficiency during these
                                     parameters, and all the what ifs that come with it.</p>
-                                <p><a href="https://github.com/bf2344/MakeOrMiss">View Project</a></p>
                                 <p><a href="https://github.com/bf2344/MakeOrMiss">View Github</a></p>
+
                             </div>
                         </div>
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="portfolio-single.html"
+                            <a href="https://bf2344.github.io/MyPortfolio"
                                 class="image order-2 d-flex justify-content-center align-items-center"
                                 style="background-image: url('images/portfoliopage.jpg'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
@@ -239,32 +239,34 @@
                             </a>
                             <div class="text order-1">
                                 <h4 class="subheading">Responsive Portfolio Page</h4>
-                                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has
+                                <h2 class="heading"><a href="https://bf2344.github.io/MyPortfolio">Even the all-powerful
+                                        Pointing has
                                         no control</a></h2>
-                                <p>A portfolio template page created as practice for using HTML/CSS/Javascript. Features Scrollify on links and also a couple minor CSS Animations.  </p>
-                                <p><a href="#">View Project</a></p>
+                                <p>A portfolio template page created as practice for using HTML/CSS/Javascript. Features
+                                    Scrollify on links and also a couple minor CSS Animations. </p>
+                                <p><a href="https://github.com/bf2344/MyPortfolio">View Github</a></p>
                             </div>
                         </div>
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="portfolio-single.html"
+                            <a href="https://bf2344.github.io/BeerTrivia"
                                 class="image d-flex justify-content-center align-items-center"
-                                style="background-image: url('images/work-3.jpg'); "
+                                style="background-image: url('images/trivia.png'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
                                 <div class="icon d-flex text-center justify-content-center align-items-center">
                                     <span class="icon-search"></span>
                                 </div>
                             </a>
                             <div class="text">
-                                <h4 class="subheading">Web Design</h4>
-                                <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has
-                                        no control</a></h2>
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic life One day however a small line of blind text.</p>
-                                <p><a href="#">View Project</a></p>
+                                <h4 class="subheading">Trivia Game</h4>
+                                <h2 class="heading"><a href="https://bf2344.github.io/BeerTrivia">A trivia game -
+                                        HTML/CSS/Javascript</a></h2>
+                                <p>A trivia game with a timer for each question, as well as a score tracker that updates
+                                    after each question.</p>
+                                <p><a href="https://github.com/bf2344/BeerTrivia">View Github</a></p>
                             </div>
                         </div>
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="portfolio-single.html"
+                            <a href="https://bf2344.github.io/unit-4-game"
                                 class="image order-2 d-flex justify-content-center align-items-center"
                                 style="background-image: url('images/work-4.jpg'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
@@ -273,12 +275,12 @@
                                 </div>
                             </a>
                             <div class="text order-1">
-                                <h4 class="subheading">Application</h4>
-                                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has
-                                        no control</a></h2>
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic life One day however a small line of blind text.</p>
-                                <p><a href="#">View Project</a></p>
+                                <h4 class="subheading">Crystal Game</h4>
+                                <h2 class="heading"><a href="https://bf2344.github.io/unit-4-game">Crystal game -
+                                        HTML/CSS/Javascript</a></h2>
+                                <p>A crystal game where you have to match the number given by clicking on crystal
+                                    buttons, which have a random value. </p>
+                                <p><a href="https://github.com/bf2344/unit-4-game">View Github</a></p>
                             </div>
                         </div>
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
@@ -322,7 +324,7 @@
             </section>
 
             <!-- <section class="ftco-section ftco-counter" id="section-counter"> -->
-                <!-- <div class="container">
+            <!-- <div class="container">
                     <div class="row justify-content-center mb-5 pb-5">
                         <div class="col-md-7 text-center heading-section ftco-animate">
                             <span>Portfolio</span>
