--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <nav id="colorlib-main-nav" role="navigation">
             <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
             <div class="js-fullheight colorlib-table">
-                <div class="img" style="background-image: url(images/author-2.jpg);"></div>
+                <div class="img" style="background-image: url(images/placeholder.jpg);"></div>
                 <div class="colorlib-table-cell js-fullheight">
                     <div class="row no-gutters">
                         <div class="col-md-12 text-center">
@@ -122,7 +122,7 @@
             <section class="ftco-section about-section">
                 <div class="container">
                     <div class="row d-flex" data-scrollax-parent="true">
-                        <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);"
+                        <div class="col-md-4 author-img" style="background-image: url(images/placeholder.jpg);"
                             data-scrollax=" properties: { translateY: '-70%'}"></div>
                         <div class="col-md-2"></div>
                         <div class="col-md-6 wrap ftco-animate">
@@ -239,9 +239,7 @@
                             </a>
                             <div class="text order-1">
                                 <h4 class="subheading">Responsive Portfolio Page</h4>
-                                <h2 class="heading"><a href="https://bf2344.github.io/MyPortfolio">Even the all-powerful
-                                        Pointing has
-                                        no control</a></h2>
+                                <h2 class="heading"><a href="https://bf2344.github.io/MyPortfolio">Portfolio Template - HTML/CSS/Javascript/AOS</a></h2>
                                 <p>A portfolio template page created as practice for using HTML/CSS/Javascript. Features
                                     Scrollify on links and also a couple minor CSS Animations. </p>
                                 <p><a href="https://github.com/bf2344/MyPortfolio">View Github</a></p>
@@ -268,7 +266,7 @@
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
                             <a href="https://bf2344.github.io/unit-4-game"
                                 class="image order-2 d-flex justify-content-center align-items-center"
-                                style="background-image: url('images/work-4.jpg'); "
+                                style="background-image: url('images/crystal.jpg'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
                                 <div class="icon d-flex text-center justify-content-center align-items-center">
                                     <span class="icon-search"></span>
