--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
                         <div class="row slider-text align-items-center text-center justify-content-center"
                             data-scrollax-parent="true">
                             <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                                <p><a href="#" class="scroll">Hello! I'm</a></p>
-                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Brian
-                                    Ford</h1>
+                                <p><a href="#" class="scroll">Brian</a></p>
+                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Ford</h1>
                             </div>
                         </div>
                     </div>
@@ -109,9 +108,8 @@
                         <div class="row slider-text align-items-center text-center justify-content-center"
                             data-scrollax-parent="true">
                             <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                                <p><a href="#" class="scroll">I'm from Denver, Colorado</a></p>
-                                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Web
-                                    Developer</h1>
+                                <p><a href="#" class="scroll">Denver, Colorado</a></p>
+                                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">Front-End Developer</h1>
                             </div>
                         </div>
                     </div>
