--- a/about.html
+++ b/about.html
@@ -39,14 +39,14 @@
 		<nav id="colorlib-main-nav" role="navigation">
 			<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
 			<div class="js-fullheight colorlib-table">
-				<div class="img" style="background-image: url(images/author-2.jpg);"></div>
+				<div class="img" style="background-image: url(images/menuimg.jpeg);"></div>
 				<div class="colorlib-table-cell js-fullheight">
 					<div class="row no-gutters">
 						<div class="col-md-12 text-center">
 							<h1 class="mb-4"><a href="index.html" class="logo">Brian Ford</a></h1>
 							<ul>
 								<li><a href="index.html"><span><small>01</small>Home</span></a></li>
-								<li class="active"><a href="about.html"><span><small>02</small>Resume</span></a></li>
+								<li class="active"><a href="about.html"><span><small>02</small>About</span></a></li>
 								<li><a href="services.html"><span><small>03</small>Services</span></a></li>
 								<li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
 								<li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
@@ -76,7 +76,7 @@
 			<section class="ftco-section about-section">
 				<div class="container">
 					<div class="row d-flex my-5" data-scrollax-parent="true">
-						<div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);"
+						<div class="col-md-4 author-img" style="background-image: url(images/placeholder.jpg);"
 							data-scrollax=" properties: { translateY: '-70%'}"></div>
 						<div class="col-md-2"></div>
 						<div class="col-md-6 wrap ftco-animate">
@@ -104,7 +104,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row d-flex justify-content-end mt-5">
+					<!-- <div class="row d-flex justify-content-end mt-5">
 						<div class="col-md-10">
 							<div class="profile ftco-animate">
 								<h2 class="mb-4">Profile</h2>
@@ -115,12 +115,13 @@
 								<div class="row my-5">
 									<div class="col-md-12">
 										<p><strong>Name:</strong> <span>Brian Ford</span></p>
-										<p><strong>Address:</strong> <span>9850 Zenith Meridian Dr. Englewood, CO 80112</span></p>
-										<p><strong>Phone:</strong> <span>(561)-317-1195</span></p>
+										<p><strong>Address:</strong> <span>9850 Zenith Meridian Dr. Englewood, CO 80112</span></p> -->
+										<!-- <p><strong>Phone:</strong> <span>(561)-317-1195</span></p>
+										<p><strong>E-Mail:</strong> <span>bf@bford.dev</span></p>
 									</div>
 									
 								</div>
-							</div>
+							</div> -->
 
 							<!-- <div class="exp mt-5 ftco-animate">
 								<h2 class="mb-4">Experience</h2>
@@ -208,8 +209,8 @@
 									</div>
 								</div>
 							</div> -->
-						</div>
-					</div>
+						<!-- </div>
+					</div> -->
 					<div class="row mt-5 flex-column ftco-animate">
 						<div class="col-md-8">
 							<h2 class="mb-4">My Skills</h2>
