--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Beckham - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Brian Ford</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -37,11 +37,11 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-      	<div class="img" style="background-image: url(images/author-2.jpg);"></div>
+      	<div class="img" style="background-image: url(images/menuimg.jpg);"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="index.html" class="logo">Beckham Muff</a></h1>
+              <h1 class="mb-4"><a href="index.html" class="logo">Brian Ford</a></h1>
               <ul>
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Beckham Muff</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/BF.png);"></span>Brian Ford</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -78,7 +78,7 @@
               <h2>Read our blog</h2>
             </div>
           </div>
-	        <div class="row">
+	        <!-- <div class="row">
 	          <div class="col-md-4 ftco-animate">
 	            <div class="blog-entry">
 	              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
@@ -180,7 +180,7 @@
 	          </div>
 	        </div>
 	      </div>
-	    </section>
+	    </section> -->
       
       <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
@@ -188,14 +188,19 @@
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-                </ul>
+                  <li class="ftco-animate"><a href="https://twitter.com/BFordDev"><span
+                              class="icon-twitter"></span></a></li>
+                  <li class="ftco-animate"><a href="www.linkedin.com/in/bf2344"><span
+                              class="icon-linkedin"></span></a></li>
+                  <li class="ftco-animate"><a href="https://dribbble.com/BFordDev"><span
+                              class="icon-dribbble"></span></a></li>
+                  <li class="ftco-animate"><a href="https://github.com/bf2344"><span
+                              class="icon-github"></span></a></li>
+              </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">info@email.com</a></p>
+                <h2 class="mb-3">Contact Me</h2>
+                <p class="h3 email"><a href="mailto:bf@bford.dev">bf@bford.dev</a></p>
               </div>
             </div>
           </div>
