--- a/portfolio.html
+++ b/portfolio.html
@@ -37,14 +37,14 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-      	<div class="img" style="background-image: url(images/author-2.jpg);"></div>
+      	<div class="img" style="background-image: url(images/menuimg.jpeg);"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
               <h1 class="mb-4"><a href="index.html" class="logo">Brian Ford</a></h1>
               <ul>
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
+                <li><a href="about.html"><span><small>02</small>About</span></a></li>
                 <li><a href="services.html"><span><small>03</small>Services</span></a></li>
                 <li class="active"><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
                 <li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
