--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@
               <h1 class="mb-4"><a href="index.html" class="logo">Brian Ford</a></h1>
               <ul>
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
-                <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
+                <li><a href="about.html"><span><small>02</small>About</span></a></li>
                 <li class="active"><a href="services.html"><span><small>03</small>Services</span></a></li>
                 <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
                 <li><a href="blog.html"><span><small>05</small>Blog</span></a></li>
@@ -83,8 +83,8 @@
                 <div class="icon mb-3"><span class="icon-layers"></span></div>
                 <div class="media-body">
                   <h3 class="heading">UI/UX Design</h3>
-                  <h3 class="heading">Mobile App Design</h3>
                   <h3 class="heading">Responsive Design</h3>
+                  <h3 class="heading">Data Visualization</h3>
                 </div>
               </div>      
             </div>
@@ -103,8 +103,10 @@
                 <div class="icon mb-3"><span class="icon-code"></span></div>
                 <div class="media-body">
                   <h3 class="heading">HTML/CSS</h3>
-                  <h3 class="heading">Prototyping</h3>
-                  <h3 class="heading">User Testing</h3>
+                  <h3 class="heading">Javascript</h3>
+                  <h3 class="heading">React</h3>
+                  <h3 class="heading">D3</h3>
+
                 </div>
               </div>    
             </div>
