--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                 <p><a href="https://github.com/bf2344/unit-4-game">View Github</a></p>
                             </div>
                         </div>
-                        <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                        <!-- <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
                             <a href="portfolio-single.html"
                                 class="image d-flex justify-content-center align-items-center"
                                 style="background-image: url('images/work-5.jpg'); "
@@ -314,7 +314,7 @@
                                     unorthographic life One day however a small line of blind text.</p>
                                 <p><a href="#">View Project</a></p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
