--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/BF.jpg);"></span>Brian Ford</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/BF.png);"></span>Brian Ford</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -71,91 +71,89 @@
       </header>
 
       <section class="ftco-section">
-        <div class="container mt-5">
-          <div class="row justify-content-center mb-5 pb-5">
-            <div class="col-md-7 text-center heading-section ftco-animate">
-              <span>Portfolio</span>
-              <h2>Take a look at some of my work</h2>
+        <div class="container">
+            <div class="row justify-content-center mb-5 pb-5">
+                <div class="col-md-7 text-center heading-section ftco-animate">
+                    <span>Portfolio</span>
+                    <h2>Take a look at some of my work</h2>
+                </div>
             </div>
-          </div>
-          <div class="row no-gutters">
-	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-	              <div class="icon d-flex text-center justify-content-center align-items-center">
-	                <span class="icon-search"></span>
-	              </div>
-	            </a>
-	            <div class="text">
-	              <h4 class="subheading">Illustration</h4>
-	              <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
-	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-	              <p><a href="#">View Project</a></p>
-	            </div>
-	          </div>
-	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-2.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-	              <div class="icon d-flex text-center justify-content-center align-items-center">
-	                <span class="icon-search"></span>
-	              </div>
-	            </a>
-	            <div class="text order-1">
-	              <h4 class="subheading">Application</h4>
-	              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-	              <p><a href="#">View Project</a></p>
-	            </div>
-	          </div>
-	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-3.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-	              <div class="icon d-flex text-center justify-content-center align-items-center">
-	                <span class="icon-search"></span>
-	              </div>
-	            </a>
-	            <div class="text">
-	              <h4 class="subheading">Web Design</h4>
-	              <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
-	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-	              <p><a href="#">View Project</a></p>
-	            </div>
-	          </div>
-	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-	              <div class="icon d-flex text-center justify-content-center align-items-center">
-	                <span class="icon-search"></span>
-	              </div>
-	            </a>
-	            <div class="text order-1">
-	              <h4 class="subheading">Application</h4>
-	              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-	              <p><a href="#">View Project</a></p>
-	            </div>
-	          </div>
-	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-5.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-	              <div class="icon d-flex text-center justify-content-center align-items-center">
-	                <span class="icon-search"></span>
-	              </div>
-	            </a>
-	            <div class="text">
-	              <h4 class="subheading">Animation</h4>
-	              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-	              <p><a href="#">View Project</a></p>
-	            </div>
-	          </div>
-	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-6.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
-	              <div class="icon d-flex text-center justify-content-center align-items-center">
-	                <span class="icon-search"></span>
-	              </div>
-	            </a>
-	            <div class="text order-1">
-	              <h4 class="subheading">Branding</h4>
-	              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
-	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
-	              <p><a href="#">View Project</a></p>
-	            </div>
+            <div class="row no-gutters">
+                <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                    <a href="portfolio-single.html"
+                        class="image d-flex justify-content-center align-items-center"
+                        style="background-image: url('images/momLogo.jpg'); "
+                        data-scrollax=" properties: { translateY: '-30%'}">
+                        <div class="icon d-flex text-center justify-content-center align-items-center">
+                            <span class="icon-search"></span>
+                        </div>
+                    </a>
+                    <div class="text">
+                        <h4 class="subheading">Data Visualization</h4>
+                        <h2 class="heading"><a href="portfolio-single.html">Make Or Miss</a></h2>
+                        <p>Make or Miss is data visualization project based on the 2018-2019 NBA Season. For
+                            this project we have chosen to take a look at games that were decided by three
+                            points our less and therefore could have changed the outcome based on the final
+                            shot. Explore how standings could have differed, potential wins for that season, the
+                            correlation between time left and distance of shot, team efficiency during these
+                            parameters, and all the what ifs that come with it.</p>
+                        <p><a href="https://github.com/bf2344/MakeOrMiss">View Github</a></p>
+
+                    </div>
+                </div>
+                <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                    <a href="https://bf2344.github.io/MyPortfolio"
+                        class="image order-2 d-flex justify-content-center align-items-center"
+                        style="background-image: url('images/portfoliopage.jpg'); "
+                        data-scrollax=" properties: { translateY: '-30%'}">
+                        <div class="icon d-flex text-center justify-content-center align-items-center">
+                            <span class="icon-search"></span>
+                        </div>
+                    </a>
+                    <div class="text order-1">
+                        <h4 class="subheading">Responsive Portfolio Page</h4>
+                        <h2 class="heading"><a href="https://bf2344.github.io/MyPortfolio">Portfolio Template - HTML/CSS/Javascript/AOS</a></h2>
+                        <p>A portfolio template page created as practice for using HTML/CSS/Javascript. Features
+                            Scrollify on links and also a couple minor CSS Animations. </p>
+                        <p><a href="https://github.com/bf2344/MyPortfolio">View Github</a></p>
+                    </div>
+                </div>
+                <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                    <a href="https://bf2344.github.io/BeerTrivia"
+                        class="image d-flex justify-content-center align-items-center"
+                        style="background-image: url('images/trivia.png'); "
+                        data-scrollax=" properties: { translateY: '-30%'}">
+                        <div class="icon d-flex text-center justify-content-center align-items-center">
+                            <span class="icon-search"></span>
+                        </div>
+                    </a>
+                    <div class="text">
+                        <h4 class="subheading">Trivia Game</h4>
+                        <h2 class="heading"><a href="https://bf2344.github.io/BeerTrivia">A trivia game -
+                                HTML/CSS/Javascript</a></h2>
+                        <p>A trivia game with a timer for each question, as well as a score tracker that updates
+                            after each question.</p>
+                        <p><a href="https://github.com/bf2344/BeerTrivia">View Github</a></p>
+                    </div>
+                </div>
+                <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                    <a href="https://bf2344.github.io/unit-4-game"
+                        class="image order-2 d-flex justify-content-center align-items-center"
+                        style="background-image: url('images/crystal.jpg'); "
+                        data-scrollax=" properties: { translateY: '-30%'}">
+                        <div class="icon d-flex text-center justify-content-center align-items-center">
+                            <span class="icon-search"></span>
+                        </div>
+                    </a>
+                    <div class="text order-1">
+                        <h4 class="subheading">Crystal Game</h4>
+                        <h2 class="heading"><a href="https://bf2344.github.io/unit-4-game">Crystal game -
+                                HTML/CSS/Javascript</a></h2>
+                        <p>A crystal game where you have to match the number given by clicking on crystal
+                            buttons, which have a random value. </p>
+                        <p><a href="https://github.com/bf2344/unit-4-game">View Github</a></p>
+                    </div>
+                </div>
 	          </div>
 	        </div>
 	        <div class="row mt-5">
