--- a/about.html
+++ b/about.html
@@ -84,8 +84,8 @@
 								<h1 class="bold-text">About</h1>
 								<div class="p-5">
 									<h2 class="mb-5">Brian Ford</h2>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live
-										the blind texts. Separated they live in.</p>
+									<p>A recent graduate of The University of Denver Full Stack Coding Program. Looking
+										for my first opportunity in the tech industry.</p>
 									<p><a href="#">Checkout my resume</a></p>
 									<ul class="ftco-footer-social list-unstyled mt-4">
 										<li><a href="https://twitter.com/BFordDev"><span
@@ -98,7 +98,7 @@
 										</li>
 								</ul>
 								<h5>Contact me here!</h5>
-								<p>Email: <a href="bf@bford.dev">bf@bford.dev</a></p>
+								<p>Email: <a href="mailto:bf@bford.dev">bf@bford.dev</a></p>
 								<p>Phone: <a href="#">(561) 317-1195</a></p>
 								</div>
 							</div>
@@ -303,7 +303,7 @@
 					</div>
 					<div class="ftco-footer-widget">
 							<h2 class="mb-3">Contact Us</h2>
-							<p class="h3 email"><a href="bf@bford.dev">bf@bford.dev</a></p>
+							<p class="h3 email"><a href="mailto:bf@bford.dev">bf@bford.dev</a></p>
 							</div>
 						</div>
 					</div>
