--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                             data-scrollax-parent="true">
                             <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                                 <p><a href="#" class="scroll">Brian</a></p>
-                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Ford</h1>
+                                <h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Ford
+                                </h1>
                             </div>
                         </div>
                     </div>
@@ -109,7 +110,8 @@
                             data-scrollax-parent="true">
                             <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                                 <p><a href="#" class="scroll">Denver, Colorado</a></p>
-                                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">Front-End Developer</h1>
+                                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">Front-End
+                                    Developer</h1>
                             </div>
                         </div>
                     </div>
@@ -129,8 +131,8 @@
                                 <div class="p-5">
                                     <h2 class="mb-5">Brian Ford</h2>
                                     <p>A recent graduate of The University of Denver Full Stack Coding Program. Looking
-                                        for my first opportunity in the tech industry. </p>
-                                    <p><a href="./assets/NewestResume.pdf">Checkout My Resume</a></p>
+                                        for my first opportunity in the Tech Industry. </p>
+                                    <!-- <p><a href="./assets/NewestResume.pdf"><span>Checkout My Resume</span></a></p> -->
                                     <ul class="ftco-footer-social list-unstyled mt-4">
                                         <li><a href="https://twitter.com/BFordDev"><span
                                                     class="icon-twitter"></span></a></li>
@@ -221,7 +223,13 @@
                                     points our less and therefore could have changed the outcome based on the final
                                     shot. Explore how standings could have differed, potential wins for that season, the
                                     correlation between time left and distance of shot, team efficiency during these
-                                    parameters, and all the what ifs that come with it.</p>
+                                    parameters, and all the what ifs that come with it.
+                                    <br>
+                                    <br>
+                                    This project is currently only linked to the Github repository. It should be
+                                    deployed and viewable by July 7th, 2019. I do encourage anyone interested to fork
+                                    repository and take a look.
+                                </p>
                                 <p><a href="https://github.com/bf2344/MakeOrMiss">View Github</a></p>
 
                             </div>
@@ -237,7 +245,8 @@
                             </a>
                             <div class="text order-1">
                                 <h4 class="subheading">Responsive Portfolio Page</h4>
-                                <h2 class="heading"><a href="https://bf2344.github.io/MyPortfolio">Portfolio Template - HTML/CSS/Javascript/AOS</a></h2>
+                                <h2 class="heading"><a href="https://bf2344.github.io/MyPortfolio">Portfolio Template -
+                                        HTML/CSS/Javascript/AOS</a></h2>
                                 <p>A portfolio template page created as practice for using HTML/CSS/Javascript. Features
                                     Scrollify on links and also a couple minor CSS Animations. </p>
                                 <p><a href="https://github.com/bf2344/MyPortfolio">View Github</a></p>
