--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
 							</div> -->
 						<!-- </div>
 					</div> -->
-					<div class="row mt-5 flex-column ftco-animate">
+					<!-- <div class="row mt-5 flex-column ftco-animate">
 						<div class="col-md-8">
 							<h2 class="mb-4">My Skills</h2>
 						</div>
@@ -283,7 +283,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 			<footer class="ftco-footer ftco-bg-dark ftco-section">
 				<div class="container">
