--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                                     <h2 class="mb-5">Brian Ford</h2>
                                     <p>A recent graduate of The University of Denver Full Stack Coding Program. Looking
                                         for my first opportunity in the Tech Industry. </p>
-                                    <!-- <p><a href="./assets/NewestResume.pdf"><span>Checkout My Resume</span></a></p> -->
+
+
                                     <ul class="ftco-footer-social list-unstyled mt-4">
                                         <li><a href="https://twitter.com/BFordDev"><span
                                                     class="icon-twitter"></span></a></li>
@@ -373,6 +374,8 @@
                 <div class="container">
                     <div class="row mb-5 justify-content-center">
                         <div class="col-md-5 text-center">
+                                <p><a href="./assets/NewestResume.pdf">Checkout My Resume</a></p>
+
                             <div class="ftco-footer-widget mb-5">
                                 <ul class="ftco-footer-social list-unstyled">
                                     <li class="ftco-animate"><a href="https://twitter.com/BFordDev"><span
@@ -386,7 +389,7 @@
                                 </ul>
                             </div>
                             <div class="ftco-footer-widget">
-                                <h2 class="mb-3">Contact Us</h2>
+                                <h2 class="mb-3">Contact Me</h2>
                                 <p class="h3 email"><a href="bf@bford.dev">bf@bford.dev</a></p>
                             </div>
                         </div>
