--- a/contact.html
+++ b/contact.html
@@ -120,6 +120,7 @@
         <div class="container">
           <div class="row mb-5 justify-content-center">
             <div class="col-md-5 text-center">
+              <p><a href="./assets/NewestResume.pdf">Checkout My Resume</a></p>
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
 									<li class="ftco-animate"><a href="https://twitter.com/BFordDev"><span
@@ -134,7 +135,7 @@
 					</div>
 					<div class="ftco-footer-widget">
 							<h2 class="mb-3">Contact Us</h2>
-							<p class="h3 email"><a href="bf@bford.dev">bf@bford.dev</a></p>
+              <p class="h3 email"><a href="bf@bford.dev">bf@bford.dev</a></p>
               </div>
             </div>
           </div>
