--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     </div>
                     <div class="row no-gutters">
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="portfolio-single.html"
+                            <a href="https://salty-coast-38970.herokuapp.com/"
                                 class="image d-flex justify-content-center align-items-center"
                                 style="background-image: url('images/momLogo.jpg'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
@@ -218,18 +218,13 @@
                             </a>
                             <div class="text">
                                 <h4 class="subheading">Data Visualization</h4>
-                                <h2 class="heading"><a href="portfolio-single.html">Make Or Miss</a></h2>
+                                <h2 class="heading"><a href="https://salty-coast-38970.herokuapp.com/">Make Or Miss</a></h2>
                                 <p>Make or Miss is data visualization project based on the 2018-2019 NBA Season. For
                                     this project we have chosen to take a look at games that were decided by three
                                     points our less and therefore could have changed the outcome based on the final
                                     shot. Explore how standings could have differed, potential wins for that season, the
                                     correlation between time left and distance of shot, team efficiency during these
                                     parameters, and all the what ifs that come with it.
-                                    <br>
-                                    <br>
-                                    This project is currently only linked to the Github repository. It should be
-                                    deployed and viewable by July 7th, 2019. I do encourage anyone interested to fork
-                                    repository and take a look.
                                 </p>
                                 <p><a href="https://github.com/bf2344/MakeOrMiss">View Github</a></p>
 
