--- a/about.html
+++ b/about.html
@@ -86,7 +86,6 @@
 									<h2 class="mb-5">Brian Ford</h2>
 									<p>A recent graduate of The University of Denver Full Stack Coding Program. Looking
 										for my first opportunity in the tech industry.</p>
-									<p><a href="#">Checkout my resume</a></p>
 									<ul class="ftco-footer-social list-unstyled mt-4">
 										<li><a href="https://twitter.com/BFordDev"><span
 																class="icon-twitter"></span></a></li>
@@ -289,6 +288,7 @@
 				<div class="container">
 					<div class="row mb-5 justify-content-center">
 						<div class="col-md-5 text-center">
+								<p><a href="./assets/NewestResume.pdf">Checkout My Resume</a></p>
 							<div class="ftco-footer-widget mb-5">
 								<ul class="ftco-footer-social list-unstyled">
 									<li class="ftco-animate"><a href="https://twitter.com/BFordDev"><span
