--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
                             </a>
                             <div class="text">
                                 <h4 class="subheading">Data Visualization</h4>
-                                <h2 class="heading"><a href="https://salty-coast-38970.herokuapp.com/">Make Or Miss</a></h2>
+                                <h2 class="heading"><a href="https://salty-coast-38970.herokuapp.com/">Make Or Miss</a>
+                                </h2>
                                 <p>Make or Miss is data visualization project based on the 2018-2019 NBA Season. For
                                     this project we have chosen to take a look at games that were decided by three
                                     points our less and therefore could have changed the outcome based on the final
@@ -284,10 +285,10 @@
                                 <p><a href="https://github.com/bf2344/unit-4-game">View Github</a></p>
                             </div>
                         </div>
-                        <!-- <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="portfolio-single.html"
+                        <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                            <a href="https://peaceful-escarpment-83290.herokuapp.com/"
                                 class="image d-flex justify-content-center align-items-center"
-                                style="background-image: url('images/work-5.jpg'); "
+                                style="background-image: url('images/project3.png'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
                                 <div class="icon d-flex text-center justify-content-center align-items-center">
                                     <span class="icon-search"></span>
@@ -295,14 +296,13 @@
                             </a>
                             <div class="text">
                                 <h4 class="subheading">Animation</h4>
-                                <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has
-                                        no control</a></h2>
-                                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-                                    unorthographic life One day however a small line of blind text.</p>
-                                <p><a href="#">View Project</a></p>
+                                <h2 class="heading"><a href="https://peaceful-escarpment-83290.herokuapp.com/">Text
+                                        Based RPG</a></h2>
+                                <p>A Text Based RPG using ReactJS. The game is based off of the Full Stack Coding Boot Camp I attended at the University of Denver.</p>
+                                <p><a href="https://github.com/KTurnage/Project3">View Github</a></p>
                             </div>
                         </div>
-                        <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                        <!-- <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
                             <a href="portfolio-single.html"
                                 class="image order-2 d-flex justify-content-center align-items-center"
                                 style="background-image: url('images/work-6.jpg'); "
@@ -319,7 +319,7 @@
                                     unorthographic life One day however a small line of blind text.</p>
                                 <p><a href="#">View Project</a></p>
                             </div>
-                        </div> -->
+                        </div>  -->
                     </div>
                 </div>
             </section>
@@ -369,7 +369,7 @@
                 <div class="container">
                     <div class="row mb-5 justify-content-center">
                         <div class="col-md-5 text-center">
-                                <p><a href="./assets/BrianFord.docx">Checkout My Resume</a></p>
+                            <p><a href="./assets/BrianFord.docx">Checkout My Resume</a></p>
 
                             <div class="ftco-footer-widget mb-5">
                                 <ul class="ftco-footer-social list-unstyled">
