--- a/portfolio.html
+++ b/portfolio.html
@@ -154,6 +154,23 @@
                         <p><a href="https://github.com/bf2344/unit-4-game">View Github</a></p>
                     </div>
                 </div>
+                <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
+                  <a href="https://peaceful-escarpment-83290.herokuapp.com/"
+                      class="image d-flex justify-content-center align-items-center"
+                      style="background-image: url('images/project3.png'); "
+                      data-scrollax=" properties: { translateY: '-30%'}">
+                      <div class="icon d-flex text-center justify-content-center align-items-center">
+                          <span class="icon-search"></span>
+                      </div>
+                  </a>
+                  <div class="text">
+                      <h4 class="subheading">Animation</h4>
+                      <h2 class="heading"><a href="https://peaceful-escarpment-83290.herokuapp.com/">Text
+                              Based RPG</a></h2>
+                      <p>A Text Based RPG using ReactJS. The game is based off of the Full Stack Coding Boot Camp I attended at the University of Denver.</p>
+                      <p><a href="https://github.com/KTurnage/Project3">View Github</a></p>
+                  </div>
+              </div>
 	          </div>
 	        </div>
 	        <div class="row mt-5">
