--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             </a>
                             <div class="text">
                                 <h4 class="subheading">Data Visualization</h4>
-                                <h2 class="heading"><a href="https://salty-coast-38970.herokuapp.com/">Make Or Miss</a>
+                                <h2 class="heading"><a href="https://salty-coast-38970.herokuapp.com/">Make Or Miss - ReactJS/D3</a>
                                 </h2>
                                 <p>Make or Miss is data visualization project based on the 2018-2019 NBA Season. For
                                     this project we have chosen to take a look at games that were decided by three
@@ -260,7 +260,7 @@
                             </a>
                             <div class="text">
                                 <h4 class="subheading">Trivia Game</h4>
-                                <h2 class="heading"><a href="https://bf2344.github.io/BeerTrivia">A trivia game -
+                                <h2 class="heading"><a href="https://bf2344.github.io/BeerTrivia">A Trivia Game -
                                         HTML/CSS/Javascript</a></h2>
                                 <p>A trivia game with a timer for each question, as well as a score tracker that updates
                                     after each question.</p>
@@ -295,9 +295,9 @@
                                 </div>
                             </a>
                             <div class="text">
-                                <h4 class="subheading">Animation</h4>
+                                <h4 class="subheading">Text Based RPG</h4>
                                 <h2 class="heading"><a href="https://peaceful-escarpment-83290.herokuapp.com/">Text
-                                        Based RPG</a></h2>
+                                        ReactJS</a></h2>
                                 <p>A Text Based RPG using ReactJS. The game is based off of the Full Stack Coding Boot Camp I attended at the University of Denver.</p>
                                 <p><a href="https://github.com/KTurnage/Project3">View Github</a></p>
                             </div>
