--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
                     </a>
                     <div class="text">
                         <h4 class="subheading">Data Visualization</h4>
-                        <h2 class="heading"><a href="https://salty-coast-38970.herokuapp.com/">Make Or Miss</a></h2>
+                        <h2 class="heading"><a href="https://salty-coast-38970.herokuapp.com/">Make Or Miss - ReactJS/D3</a></h2>
                         <p>Make or Miss is data visualization project based on the 2018-2019 NBA Season. For
                             this project we have chosen to take a look at games that were decided by three
                             points our less and therefore could have changed the outcome based on the final
@@ -164,16 +164,16 @@
                       </div>
                   </a>
                   <div class="text">
-                      <h4 class="subheading">Animation</h4>
+                      <h4 class="subheading">Text Based RPG</h4>
                       <h2 class="heading"><a href="https://peaceful-escarpment-83290.herokuapp.com/">Text
-                              Based RPG</a></h2>
+                              ReactJS</a></h2>
                       <p>A Text Based RPG using ReactJS. The game is based off of the Full Stack Coding Boot Camp I attended at the University of Denver.</p>
                       <p><a href="https://github.com/KTurnage/Project3">View Github</a></p>
                   </div>
               </div>
 	          </div>
 	        </div>
-	        <div class="row mt-5">
+	        <!-- <div class="row mt-5">
 	          <div class="col text-center">
 	            <div class="block-27">
 	              <ul>
@@ -187,7 +187,7 @@
 	              </ul>
 	            </div>
 	          </div>
-	        </div>
+	        </div> -->
         </div>
       </section>
       
