--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             data-scrollax-parent="true">
                             <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                                 <p><a href="#" class="scroll">Denver, Colorado</a></p>
-                                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">Front-End
+                                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">Full-Stack
                                     Developer</h1>
                             </div>
                         </div>
