--- a/portfolio.html
+++ b/portfolio.html
@@ -165,8 +165,7 @@
                   </a>
                   <div class="text">
                       <h4 class="subheading">Text Based RPG</h4>
-                      <h2 class="heading"><a href="https://peaceful-escarpment-83290.herokuapp.com/">Text
-                              ReactJS</a></h2>
+                      <h2 class="heading"><a href="https://peaceful-escarpment-83290.herokuapp.com/">Game - ReactJS</a></h2>
                       <p>A Text Based RPG using ReactJS. The game is based off of the Full Stack Coding Boot Camp I attended at the University of Denver.</p>
                       <p><a href="https://github.com/KTurnage/Project3">View Github</a></p>
                   </div>
@@ -182,7 +181,7 @@
                 </a>
                 <div class="text order-1">
                     <h4 class="subheading">Weather Finder</h4>
-                    <h2 class="heading"><a href="https://peaceful-inlet-18025.herokuapp.com/">ReactJS/Weather API</a></h2>
+                    <h2 class="heading"><a href="https://peaceful-inlet-18025.herokuapp.com/">Weather App - ReactJS/Weather API</a></h2>
                     <p>This is a Weather App using ReactJS and The OpenWeather API. Input City and Country to return various bits of Weather Data</p>
                     <p><a href="https://github.com/bf2344/WeatherFinder">View Github</a></p>
                 </div>
