--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                             data-scrollax-parent="true">
                             <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                                 <p><a href="#" class="scroll">Denver, Colorado</a></p>
-                                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">Full-Stack
+                                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">
+                                    Full-Stack
                                     Developer</h1>
                             </div>
                         </div>
@@ -251,21 +252,21 @@
                             </div>
                         </div>
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="https://bf2344.github.io/BeerTrivia"
+                            <a href="https://bf2344.github.io/OnlineStore/"
                                 class="image d-flex justify-content-center align-items-center"
-                                style="background-image: url('images/trivia.png'); "
+                                style="background-image: url('images/jordans.png'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
                                 <div class="icon d-flex text-center justify-content-center align-items-center">
                                     <span class="icon-search"></span>
                                 </div>
                             </a>
                             <div class="text">
-                                <h4 class="subheading">Trivia Game</h4>
-                                <h2 class="heading"><a href="https://bf2344.github.io/BeerTrivia">A Trivia Game -
+                                <h4 class="subheading">Bolt Online</h4>
+                                <h2 class="heading"><a href="https://bf2344.github.io/OnlineStore/">Mock Online Store -
                                         HTML/CSS/Javascript</a></h2>
-                                <p>A trivia game with a timer for each question, as well as a score tracker that updates
-                                    after each question.</p>
-                                <p><a href="https://github.com/bf2344/BeerTrivia">View Github</a></p>
+                                <p>A mock-up front page of an online shoe store, utilizing Bootstrap and CSS Grid, this
+                                    page is my attempt at cloning Finish Line's website</p>
+                                <p><a href="https://github.com/bf2344/OnlineStore">View Github</a></p>
                             </div>
                         </div>
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
@@ -298,7 +299,7 @@
                             <div class="text">
                                 <h4 class="subheading">Text Based RPG</h4>
                                 <h2 class="heading"><a href="https://peaceful-escarpment-83290.herokuapp.com/">
-                                       Game - ReactJS</a></h2>
+                                        Game - ReactJS</a></h2>
                                 <p>A Text Based RPG using ReactJS. The game is based off of the Full Stack Coding Boot
                                     Camp I attended at the University of Denver.</p>
                                 <p><a href="https://github.com/KTurnage/Project3">View Github</a></p>
@@ -315,8 +316,10 @@
                             </a>
                             <div class="text order-1">
                                 <h4 class="subheading">Weather Finder</h4>
-                                <h2 class="heading"><a href="https://peaceful-inlet-18025.herokuapp.com/">Weather App - ReactJS/Weather API</a></h2>
-                                <p>This is a Weather App using ReactJS and The OpenWeather API. Input City and Country to return various bits of Weather Data</p>
+                                <h2 class="heading"><a href="https://peaceful-inlet-18025.herokuapp.com/">Weather App -
+                                        ReactJS/Weather API</a></h2>
+                                <p>This is a Weather App using ReactJS and The OpenWeather API. Input City and Country
+                                    to return various bits of Weather Data</p>
                                 <p><a href="https://github.com/bf2344/WeatherFinder">View Github</a></p>
                             </div>
                         </div>
